# phone_task

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  phone_task.db  pyproject.toml  template.env
alembic/: env.py
alloy/: config.alloy
grafana/dashboards/: loki-overview.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: loki.yaml
minio/: Dockerfile
nginx/: Dockerfile  nginx.conf
src/: config.py  main.py
src/api/v1/: api.py  calls.py
src/core/: logging.py
src/database/: engine.py  session.py
src/migrations/: env.py
src/migrations/versions/: 9f97debcf936_.py  b39779f41eda_.py  d6a214f1cc75_.py
src/models/: base.py  call.py  record.py  silent_range.py
src/schemas/: __init__.py  call.py  record.py
src/utils/: audio.py  minio.py
src/worker/: celery_app.py  tasks.py
