[project]
name = "phone-task"
version = "0.1.0"
description = "test task"
readme = "README.md"
authors = [
    { name = "Andrew Kozmin", email = "syn.kolbasyn.06@gmail.com" }
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.13, <3.14"
dependencies = [
    "alembic==1.16.5",
    "asyncpg==0.30.0",
    "audioop-lts==0.2.2",
    "celery[redis]==5.5.3",
    "fastapi[standard]==0.117.1",
    "minio==7.2.16",
    "phonenumbers==9.0.14",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
    "pydantic[email]==2.11.9",
    "pydub==0.25.1",
    "redis==5.2.1",
    "sqlalchemy==2.0.43",
]

[dependency-groups]
dev = [
    "ruff==0.13.1",
]

[tool.uv]
default-groups = []

[tool.ruff]
src = ["./src/"]
lint.select = ["ALL"]
lint.ignore = ["D10", "D203", "D212"]
